--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "babel-polyfill": "^6.26.0",
     "eslint": "^4.6.1",
     "eslint-plugin-react": "^7.3.0",
+    "firebase": "^4.8.2",
     "prettier": "^1.7.0"
   },
   "dependencies": {
+    "lodash": "^4.17.4",
     "node-sass-chokidar": "^0.0.3",
     "npm-run-all": "^4.1.2",
     "react": "^16.2.0",
