--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "eslint": "^5.11.0",
     "eslint-plugin-react": "^7.11.1",
     "firebase": "^5.7.1",
+    "node-sass": "^4.11.0",
     "prettier": "^1.7.0"
   },
   "dependencies": {
     "lodash": "^4.17.4",
-    "npm-run-all": "^4.1.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-modal": "^3.1.10",
@@ -26,19 +26,10 @@
     "rpg-awesome": "^0.2.0"
   },
   "scripts": {
-    "build-css": "node-sass --include-path ./src --include-path ./node_modules src/ -o src/",
-    "watch-css": "npm run build-css && node-sass --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
-    "start-js": "react-scripts start",
-    "start": "npm-run-all -p watch-css start-js",
-    "build-js": "react-scripts build",
-    "build": "npm-run-all build-css build-js",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
 }
