--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "eslint-plugin-react": "^7.11.1",
     "firebase": "^5.7.1",
     "node-sass": "^4.11.0",
-    "prettier": "^1.7.0"
+    "prettier": "^1.16.4"
   },
   "dependencies": {
     "lodash": "^4.17.4",
@@ -31,5 +31,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
