--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-scripts": "^2.1.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "rpg-awesome": "^0.2.0"
+    "rpg-awesome": "^0.2.0",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
